# radio-prop

./: LICENSE.txt  README.md  pyproject.toml
src/radio_prop/: __about__.py
tests/: __init__.py
